# async-finite-state-machine

./: Cargo.toml  Makefile
src/: lib.rs
tests/: async.rs  sync.rs
tests/__fixtures__/: db.json  template.json
