[package]
name = "async-finite-state-machine"
version = "0.1.0"
authors = ["Ciro.DECARO <ciro.decaro@edenred.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
async-std = "1.5.0"
reqwest = "0.10.4"
tokio = "0.2.13"

[dependencies.futures]
version = "0.3.4"
features = ["thread-pool"]
